--- a/AiEducationBasic.html
+++ b/AiEducationBasic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training - Basic</title>
+    <title>AI Education - Basic</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -11,10 +11,10 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - Basic</p>  
+    <p class="TitleHead">AI Education - Basic</p>  
 	
-    <!--- Basic Training - Videos -->
-    <p class="TitleList1Blue">Basic Training - Videos</p>
+    <!--- Basic Education - Videos -->
+    <p class="TitleList1Blue">Basic Education - Videos</p>
 	<p>Note that sometimes adding the subtitles, or watching slower/faster helps.</p>
     <div class="video-container">
     <ol>
@@ -72,8 +72,8 @@
 
 <!----------------------------------------------------------------------------------------------->
 
-    <!--- Basic Training - Web Sites -->
-    <p class="TitleList1Blue">Basic Training - Web Sites</p>
+    <!--- Basic Education - Web Sites -->
+    <p class="TitleList1Blue">Basic Education - Web Sites</p>
     <ol>
         <li>
 		<p><a href="https://tiktokenizer.vercel.app/?model=cl100k_base" target="_blank">Tiktokenizer</a></p>
