--- a/AiEducationCode.html
+++ b/AiEducationCode.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training - Code</title>
+    <title>AI Education - Code</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -11,10 +11,10 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - Code</p>  
+    <p class="TitleHead">AI Education - Code</p>  
  
-   <!--- Code Training - Basic Projects -->
-	<p class="TitleList1Blue">Code Training - Basic Projects</p>
+   <!--- Code Education - Basic Projects -->
+	<p class="TitleList1Blue">Code Education - Basic Projects</p>
     <ol>
 	    <li>
 		<p class="TitleList2Blue">Backpropagation - example code</p>
@@ -25,7 +25,7 @@
 	        <iframe width="300" height="170" src="https://www.youtube.com/embed/VMj-3S1tku0" frameborder="0" allowfullscreen></iframe>
             </div>
  	     	<p>Backpropagation example code.
-        	<br>Requires Neural Networks knowledge (videos 1-4 in the  basic training).</p>
+        	<br>Requires Neural Networks knowledge (videos 1-4 in the basic Education).</p>
 		    </li>
             
             <li>
@@ -75,7 +75,7 @@
 	        <iframe width="300" height="170" src="https://www.youtube.com/embed/kCc8FmEb1nY" frameborder="0" allowfullscreen></iframe>
             </div>
  	     	<p>GPT-1 character generation example code.
-        	<br>Requires Transformer knowledge (videos 5-8 in the basic training).</p>
+        	<br>Requires Transformer knowledge (videos 5-8 in the basic Education).</p>
 		    </li>
 			
             <li>
@@ -93,8 +93,8 @@
 
 <!----------------------------------------------------------------------------------------------->
 
-   <!--- Code Training - Advanced Projects -->
-    <p class="TitleList1Blue">Code Training - Advanced Projects</p>
+   <!--- Code Education - Advanced Projects -->
+    <p class="TitleList1Blue">Code Education - Advanced Projects</p>
     <ol>
 		<li>
 		<p class="TitleList2Blue">BatchNorm and optimization</p>
