--- a/AiEducationModels.html
+++ b/AiEducationModels.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training - Models</title>
+    <title>AI Education - Models</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -11,10 +11,10 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - Models</p>  
+    <p class="TitleHead">AI Education - Models</p>  
 	
-   <!--- Models Training -->
-	<p class="TitleList1Blue">Models Training</p>
+   <!--- Models Education -->
+	<p class="TitleList1Blue">Models Education</p>
     <ol>
 
 		<li>
