--- a/AiEducationMore.html
+++ b/AiEducationMore.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training - More</title>
+    <title>AI Education - More</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -11,7 +11,7 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - More</p>  
+    <p class="TitleHead">AI Education - More</p>  
 
    <!--- More Videos -->
     <p class="TitleList1Blue">More Videos</p>
