--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training list</title>
+    <title>AI Education list</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -11,50 +11,50 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training</p>  
+    <p class="TitleHead">AI Education</p>  
 
-   <!--- AI Training - Subjects -->
-    <p class="TitleList1Blue">AI Training - Subjects</p>
+   <!--- AI Education - Subjects -->
+    <p class="TitleList1Blue">AI Education - Subjects</p>
     <ol>
         <li>
-		<p><a href="AiTrainingBasic.html" target="_blank">AI Training - Basic</a></p>
+		<p><a href="AiEducationBasic.html" target="_blank">AI Education - Basic</a></p>
         <div class="iframe-wrapper">
-        <iframe src="AiTrainingBasic.html"></iframe>
+        <iframe src="AiEducationBasic.html"></iframe>
         </div>
 		</li>
 
         <li>
-		<p><a href="AiTrainingDevTools.html" target="_blank">AI Training - Development Tools</a></p>
+		<p><a href="AiEducationDevTools.html" target="_blank">AI Education - Development Tools</a></p>
         <div class="iframe-wrapper">
-        <iframe src="AiTrainingDevTools.html"></iframe>
+        <iframe src="AiEducationDevTools.html"></iframe>
         </div>
 		</li>
 
         <li>
-		<p><a href="AiTrainingCode.html" target="_blank">AI Training - Code</a></p>
+		<p><a href="AiEducationCode.html" target="_blank">AI Education - Code</a></p>
         <div class="iframe-wrapper">
-        <iframe src="AiTrainingCode.html"></iframe>
+        <iframe src="AiEducationCode.html"></iframe>
         </div>
 		</li>
 
         <li>
-		<p><a href="AiTrainingModels.html" target="_blank">AI Training - Models</a></p>
+		<p><a href="AiEducationModels.html" target="_blank">AI Education - Models</a></p>
         <div class="iframe-wrapper">
-        <iframe src="AiTrainingModels.html"></iframe>
+        <iframe src="AiEducationModels.html"></iframe>
         </div>
 		</li>
 
         <li>
-		<p><a href="AiTrainingPostTraining.html" target="_blank">AI Training - Post Training</a></p>
+		<p><a href="AiEducationPostTraining.html" target="_blank">AI Education - Post Training</a></p>
         <div class="iframe-wrapper">
-        <iframe src="AiTrainingPostTraining.html"></iframe>
+        <iframe src="AiEducationPostTraining.html"></iframe>
         </div>
 		</li>
 
         <li>
-		<p><a href="AiTrainingMore.html" target="_blank">AI Training - More</a></p>
+		<p><a href="AiEducationMore.html" target="_blank">AI Education - More</a></p>
         <div class="iframe-wrapper">
-        <iframe src="AiTrainingMore.html"></iframe>
+        <iframe src="AiEducationMore.html"></iframe>
         </div>
 		</li>
     </ol>
