--- a/AiEducationDevTools.html
+++ b/AiEducationDevTools.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training - Dev Tools</title>
+    <title>AI Education - Dev Tools</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -11,10 +11,10 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - Development Tools</p>  
+    <p class="TitleHead">AI Education - Development Tools</p>  
 
-    <!--- AI Training - Development Tools -->
-    <p class="TitleList1Blue">AI Training - Development Tools</p>
+    <!--- AI Education - Development Tools -->
+    <p class="TitleList1Blue">AI Education - Development Tools</p>
     <ol>
 	    <li>
 		<p class="TitleList2Blue">Python</p>
