--- a/AiEducationPostTraining.html
+++ b/AiEducationPostTraining.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training - Post Training</title>
+    <title>AI Education - Post Training</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -11,7 +11,7 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - Post Training</p>  
+    <p class="TitleHead">AI Education - Post Training</p>  
 
     <!--- Fine Tuning -->
     <p class="TitleList1Blue">Fine Tuning Training</p>
