--- a/AiEducationDevTools.html
+++ b/AiEducationDevTools.html
@@ -76,7 +76,7 @@
 		<ol>
     		<li>
     		<a href="https://pytorch.org/get-started/locally/" target="_blank">PyTorch Site</a>
-			<p>pip3 install torch torchvision torchaudio</p>
+			<p><code>pip3 install torch torchvision torchaudio</code></p>
 		    <p>The above is the command for runing on CPU. In case of Nvidia GPU get from the site the CUDA installation command.</p>
 			</li>
     		<li>
